<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.roisagiv.android.redux.examples.shoppingcart.ShoppingCartActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_shoppingcart_header"
        style="?android:textAppearanceLarge"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_shoppingcart_products_header"
        style="?android:textAppearanceMedium"
        />

    <ListView
        android:id="@+id/listview_products"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_shoppingcart_cart_header"
        style="?android:textAppearanceMedium"
        />

    <ListView
        android:id="@+id/listview_cart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <TextView
        android:id="@+id/textview_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/text_shoppingcart_total"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_shoppingcart_checkout"
        />
  </LinearLayout>

</android.support.v4.widget.NestedScrollView>
